--- a/_config.yml
+++ b/_config.yml
@@ -6,9 +6,9 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-baseurl: "/digital-playbook-guide-numerique" # the subpath of your site, e.g. /blog
+baseurl: "/canadajeckylltheme/" # the subpath of your site, e.g. /blog
 defaultView: "" # View where site should default
-url: "http://canada-ca.github.io" # the base hostname & protocol for your site
+url: "http://kingbain.github.io" # the base hostname & protocol for your site
 twitter_username: canada-ca
 github_username:  canada-ca
 wet_cdts_hosturl: "https://www.canada.ca/etc/designs/canada/cdts/gcweb"
