--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-baseurl: "/canadajeckylltheme/" # the subpath of your site, e.g. /blog
+baseurl: "/canadajeckylltheme" # the subpath of your site, e.g. /blog
 defaultView: "" # View where site should default
 url: "http://kingbain.github.io" # the base hostname & protocol for your site
 twitter_username: canada-ca
